policies/kyverno/tests/pod-security/bad-pod-no-resources.yaml
apiVersion: v1
kind: Pod
metadata:
  name: bad-pod-no-resources
  namespace: node-api-production
  labels:
    app.kubernetes.io/name: node-api
    app.kubernetes.io/instance: node-api
spec:
  securityContext:
    runAsNonRoot: true
    seccompProfile:
      type: RuntimeDefault
  containers:
    - name: node-api
      image: ghcr.io/example/node-api:a8f2c91
      securityContext:
        allowPrivilegeEscalation: false
        readOnlyRootFilesystem: true
        runAsNonRoot: true
        capabilities:
          drop: ["ALL"]
